Adjust language to our current state

--- a/dev_docs/contributing/standards.mdx
+++ b/dev_docs/contributing/standards.mdx
@@ -17,7 +17,7 @@ Please read and abide by our <DocLink id="kibStyleGuide" text="Style guide" />. 
 
 ## Adding dependencies
 
-Please read and abide by our <DocLink id="kibThirdPartyDependencies" text="Third-party dependency guide" />.
+Please read and abide by our <DocLink id="kibThirdPartyDependencies" text="third-party dependencies guide" />.
 
 ## RESTful HTTP APIs
 
