--- a/docs/user/dashboard/dashboard-controls.asciidoc
+++ b/docs/user/dashboard/dashboard-controls.asciidoc
@@ -101,6 +101,9 @@ image::images/dashboard-add-time-slider-control-8.15.0.png[Controls button in th
 Several settings that apply to all controls of the same dashboard are available.
 
 . In *Edit* mode, select *Controls* > *Settings*.
++
+[role="screenshot"]
+image::images/dashboard-controls-settings-8.15.0.png[Controls button in the toolbar with the Settings option selected, width=60%]
 
 . On the *Control settings* flyout, configure the following settings:
 
@@ -120,9 +123,6 @@ Several settings that apply to all controls of the same dashboard are available.
 * To remove all controls from the dashboard, click *Delete all*.
 
 . Click *Save and close* to apply the changes.
-+
-[role="screenshot"]
-image::images/control-settings-flyout-8.15.0.png[Control settings flyout, width=50%]
 
 [float]
 [[edit-controls]]
