--- a/dev_docs/getting_started/hello_world_plugin.mdx
+++ b/dev_docs/getting_started/hello_world_plugin.mdx
@@ -89,7 +89,7 @@ And add the following to it:
 
 ```ts
 import React from 'react';
-import ReactDOM from '@kbn/react-dom';
+import ReactDOM from 'react-dom';
 import { AppMountParameters, CoreSetup, CoreStart, Plugin } from '../../../src/core/public';
 
 export class HelloWorldPlugin implements Plugin {
