--- a/dev_docs/tutorials/performance/adding_custom_performance_metrics.mdx
+++ b/dev_docs/tutorials/performance/adding_custom_performance_metrics.mdx
@@ -210,7 +210,7 @@ app.js
 
 ```
 import React from 'react';
-import ReactDOM from '@kbn/react-dom';
+import ReactDOM from 'react-dom';
 import { PerformanceContextProvider } from '@kbn/ebt-tools';
 import MyApp from './MyApp';
 
