--- a/docs/search/index.asciidoc
+++ b/docs/search/index.asciidoc
@@ -19,53 +19,53 @@ The *Search* space in {kib} comprises the following features:
 
 The Search solution and use case is made up of many tools and features across the {stack}.
 As a result, the release notes for your features of interest might live in different Elastic docs.
-// Use the following table to find links to the appropriate documentation, API references (if applicable), and release notes.
+Use the following table to find links to the appropriate documentation, API references (if applicable), and release notes.
 
-// [options="header"]
-// |===
-// | Name               | API reference           | Documentation         | Release notes
+[options="header"]
+|===
+| Name               | API reference           | Documentation         | Release notes
 
-// | Connectors
-// | link:https://example.com/connectors/api[API reference]
-// | link:https://example.com/connectors/docs[Documentation]
-// | link:{reference}/es-release-notes.html[Elasticsearch guide]
+| Connectors
+| link:https://www.elastic.co/guide/en/elasticsearch/reference/8.15/connector-apis.html[API reference]
+| <<action-types,Documentation>>
+| link:https://www.elastic.co/guide/en/elasticsearch/reference/current/es-release-notes.html[Elasticsearch guide]
 
-// | Web crawler
-// | link:https://example.com/web_crawlers/api[API reference]
-// | link:https://example.com/web_crawlers/docs[Documentation]
-// | link:https://example.com/web_crawlers/notes[Release notes]
+| Web crawler
+| link:https://www.elastic.co/guide/en/app-search/current/web-crawler-api-reference.html[API reference]
+| link:https://www.elastic.co/guide/en/enterprise-search/current/crawler.html[Documentation]
+| link:https://www.elastic.co/guide/en/enterprise-search/current/changelog.html[Enterprise Search Guide]
 
-// | Playground
-// | link:https://example.com/playground/api[API reference]
-// | link:https://example.com/playground/docs[Documentation]
-// | link:<<release-notes, Kibana guide>>
+| Playground
+| N/A
+| <<playground,Documentation>>
+| <<release-notes, Kibana guide>>
 
-// | Search Applications
-// | link:https://example.com/search_apps/api[API reference]
-// | link:https://example.com/search_apps/docs[Documentation]
-// | link:{reference}/es-release-notes.html[Elasticsearch guide]
+| Search Applications
+| link:https://www.elastic.co/guide/en/elasticsearch/reference/current/search-application-apis.html[API reference]
+| link:https://www.elastic.co/guide/en/enterprise-search/current/app-search-workplace-search.html[Documentation]
+| link:https://www.elastic.co/guide/en/elasticsearch/reference/current/es-release-notes.html[Elasticsearch guide]
 
-// | Behavioral Analytics
-// | link:https://example.com/behavioral_analytics/api[API reference]
-// | link:https://example.com/behavioral_analytics/docs[Documentation]
-// | link:{reference}/es-release-notes.html[Elasticsearch guide]
+| Behavioral Analytics
+| link:https://www.elastic.co/guide/en/elasticsearch/reference/current/behavioral-analytics-apis.html[API reference]
+| link:https://www.elastic.co/guide/en/elasticsearch/reference/current/behavioral-analytics-start.html[Documentation]
+| link:https://www.elastic.co/guide/en/elasticsearch/reference/current/es-release-notes.html[Elasticsearch guide]
 
-// | Inference Endpoints
-// | link:https://example.com/inference_endpoints/api[API reference]
-// | link:https://example.com/inference_endpoints/docs[Documentation]
-// | link:{reference}/es-release-notes.html[Elasticsearch guide]
+| Inference Endpoints
+| link:https://www.elastic.co/guide/en/elasticsearch/reference/current/inference-apis.html[API reference]
+| <<inference-endpoints,Documentation>>
+| link:https://www.elastic.co/guide/en/elasticsearch/reference/current/es-release-notes.html[Elasticsearch guide]
 
-// | Console
-// | link:https://example.com/console/api[API reference]
-// | link:https://example.com/console/docs[Documentation]
-// | link:<<release-notes, Kibana guide>>
+| Console
+| N/A
+| <<console-kibana,Documentation>>
+| <<release-notes, Kibana guide>>
 
-// | Search UI
-// | link:https://www.elastic.co/docs/current/search-ui/api/architecture[API reference]
-// | link:https://www.elastic.co/docs/current/search-ui/overview[Documentation]
-// | link:https://www.elastic.co/docs/current/search-ui[Search UI]
+| Search UI
+| link:https://www.elastic.co/docs/current/search-ui/api/architecture[API reference]
+| link:https://www.elastic.co/docs/current/search-ui[Documentation]
+| link:https://www.elastic.co/docs/current/search-ui[Search UI]
 
-// |===
+|===
 
 include::search-connection-details.asciidoc[]
 include::playground/index.asciidoc[]
