--- a/x-pack/platform/plugins/private/feedback/feedback.mdx
+++ b/x-pack/platform/plugins/private/feedback/feedback.mdx
@@ -9,7 +9,7 @@ tags: ['kibana', 'dev', 'contributor', 'feedback', 'plugin', 'shared-ux']
 
 ## Introduction
 
-Feedback plugin, also known as One Feedback, is a universal way of giving feedback about Elastic in Kibana. It allows users to easily provide feedback and CSAT scores directly from the Kibana interface.
+Feedback plugin (also known as One Feedback) is a universal way of giving feedback about Elastic in Kibana. It allows users to easily provide feedback and CSAT scores directly from the UI.
 
 ## How it works
 
@@ -22,14 +22,14 @@ It also respects the global `Usage Collection` advanced setting.
 
 Once clicked, a modal containing feedback questions and CSAT score buttons are displayed to the user. The questions are context-aware and are defined per application in `@kbn/feedback-registry` package. In case when an application has no defined questions a default set of questions is displayed.
 
-Feedback, along with other session data, is sent using the server-side EBT `feedback_submitted` event to Elastic's telemetry cluster and stored in the `ebt-kibana-server` index.
+Feedback, along with other session data, is sent using the server-side EBT `feedback_submitted` event to Elastic's telemetry cluster, where it is stored in the `ebt-kibana-server` index.
 
-## Using Feedback Plugin in your application
+## Defining application specific questions
 
-To use the Feedback Plugin in your application, you need to define questions for your application in the `@kbn/feedback-registry` package (`x-pack/platform/packages/private/feedback-registry/src/registry.ts`).
+To define application-specific questions, add them to the `@kbn/feedback-registry` package.
 
 1. Go to: `x-pack/platform/packages/private/feedback-registry/src/registry.ts`
-2. Define your questions, using the default ones as a reference. The registry accepts an array of objects with the following properties:
+2. Define up to two questions.
 
 ```ts
 /**
@@ -83,7 +83,7 @@ type FeedbackRegistry = Map<FeedbackRegistryEntryId, FeedbackRegistryEntry[]>;
 3. If you're unsure of your application ID:
   - Open your application's page in a browser.
   - Open the feedback form.
-  - Open the browser''s developer console and paste:
+  - Open the browser's developer console and paste:
     `document.querySelector('[data-app-id]')?.getAttribute('data-app-id')`
   - Press ENTER. The value returned is your application's ID.
-4. Open a PR with your changes - all questions must be approved by SharedUX team.
+4. Open a PR with your changes - all questions must be approved by the SharedUX team.
