--- a/src/core/packages/chrome/sidebar/docs/sidebar.mdx
+++ b/src/core/packages/chrome/sidebar/docs/sidebar.mdx
@@ -179,7 +179,9 @@ The sidebar renders as an `<aside>` landmark. `SidebarHeader` and `SidebarBody` 
 
 ### Panel label
 
-`SidebarHeader` requires a `title` prop. It renders as an `<h2>` heading and sets the panel's `aria-label` (e.g. "Side panel: My App"). When using custom header content via `children`, `title` is still required and used for the `aria-label`:
+The sidebar panel uses `aria-labelledby` to link the `<aside>` landmark to the heading rendered by `SidebarHeader`. This happens automatically — `SidebarHeader` places the shared heading ID on its `<h2>`, and the panel references it. A fallback `aria-label="Side panel"` is used when no heading is present.
+
+`SidebarHeader` requires a `title` prop. It renders as an `<h2>` heading that labels the panel. When using custom header content via `children`, `title` is still required — it renders as a visually hidden heading so `aria-labelledby` always works:
 
 ```tsx
 <SidebarHeader title="My App" onClose={onClose}>
@@ -187,15 +189,14 @@ The sidebar renders as an `<aside>` landmark. `SidebarHeader` and `SidebarBody` 
 </SidebarHeader>
 ```
 
-If you don't use `SidebarHeader` at all (fully custom header), you must set the label manually via `useSidebarPanel`:
+If you don't use `SidebarHeader` at all (fully custom header), you must place the heading ID on your own heading element via `useSidebarPanel`:
 
 ```tsx
-const { setLabel } = useSidebarPanel();
+import { useSidebarPanel } from '@kbn/core-chrome-sidebar-components';
 
-useEffect(() => {
-  setLabel('My App');
-  return () => setLabel(undefined);
-}, [setLabel]);
+const { headingId } = useSidebarPanel();
+
+return <h2 id={headingId}>My App</h2>;
 ```
 
 ### Focus rescue
