--- a/x-pack/platform/plugins/private/feedback/feedback.mdx
+++ b/x-pack/platform/plugins/private/feedback/feedback.mdx
@@ -13,8 +13,9 @@ Feedback plugin (also known as One Feedback) is a universal way of giving feedba
 
 ## How it works
 
-Feedback plugin registers a button in the Chrome global header area which is shown when all of those criteria all met:
-- feedback is globaly enabled (`core.notifications.feedback.isEnabled()`)
+Feedback plugin registers a button in the Chrome global header area which is shown when all of these criteria are met:
+
+- feedback is globally enabled (`core.notifications.feedback.isEnabled()`)
 - telemetry is enabled (`telemetry.telemetryService.canSendTelemetry()`)
 - telemetry is opted in (`telemetry.telemetryService.getIsOptedIn()`)
 
